# my_biped_ros2

./: -  .gitignore  README.md
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/config/: controllers.yaml  forward_position_controller.yaml
src/my_robot_description/launch/: display.launch.py  gazebo.launch.py  video.launch.py
src/my_robot_description/urdf/: my_biped.urdf.xacro  my_robot.urdf.xacro
src/my_robot_description/worlds/: empty_with_ground.sdf
